<resources>
    <string name="app_name">範例APP</string>
    <string name="TextLabel">輸入標題</string>
    <string name="EditTextLabel">請輸輸入文字</string>
    <string name="ButtonLabel">按鈕文字</string>
    <string name="receiptTextViewLabel">發票號碼</string>
    <string name="receiptEditTextLabel">請輸入發票號碼</string>
    <string name="buyDateTextViewLabel">購買日期</string>
    <string name="buyDateTextTextLabel">yyyy/MM/dd</string>
    <string name="totalAmtTextLabel">總金額</string>
    <string name="totalAmtEditTextLabel">請輸入總金額</string>
    <string name="insertReceiptButtonTextLabel">新增發票</string>
</resources>