<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/receiptLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/receiptLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiptTextViewLabel"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:id="@+id/receipt1"
            android:hint="EX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            />
        <EditText
            android:id="@+id/receipt2"
            android:hint="@string/receiptEditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buyDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/buyDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyDateTextViewLabel"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:id="@+id/buyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/buyDateTextTextLabel"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalAmtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/totalAmtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalAmtTextLabel"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:id="@+id/totalAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/totalAmtEditTextLabel"
            />
    </LinearLayout>
    <Button
        android:id="@+id/insertReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertReceiptButtonTextLabel"
        />
    <TextView
        android:id="@+id/finishContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

</LinearLayout>